--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   },
   "scripts": {
     "postinstall": "npx playwright install --with-deps",
-    "test": "mocha tests --recursive --reporter mocha-multi-reporters --reporter-options configFile=reporter-config.json",
-    "test:api": "mocha tests/api --recursive",
-    "test:all": "npm run test:api && npm run test:ui",
-    "test:ui": "npx playwright test",
-    "test:uiui": "npx playwright test --ui",
-    "report:merge": "mochawesome-merge reports/*.json > reports/merged-report.json",
-    "report:generate": "marge reports/merged-report.json -f report -o reports/html",
-    "test:allure": "npx playwright test --reporter=line,allure-playwright"
+    "report:clean": "rm -rf reports/*",
+    "report:merge": "npx mochawesome-merge reports/api/*.json > reports/api/merged-report.json",
+    "report:generate": "npx marge reports/api/merged-report.json -f api-report -o reports/html",
+    "test:api": "mocha tests/api --recursive --reporter mochawesome --reporter-options reportDir=reports/api,reportFilename=api-report,quiet=true",
+    "test:ui": "npx playwright test --reporter=line,html",
+    "report:ui": "npx playwright show-report",
+    "report:api": "marge reports/api/api-report.json -f api-report -o reports/api/html",
+    "test:all": "npm run report:clean && npm run test:api && npm run report:merge && npm run report:generate && npm run test:ui",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "axios": "^1.8.4",
@@ -26,15 +28,18 @@
     "playwright": "^1.51.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.30.0",
     "allure-playwright": "^3.2.1",
     "chai": "^4.3.7",
     "chai-colors": "^1.0.1",
+    "eslint": "^9.30.0",
+    "globals": "^16.2.0",
     "marge": "^1.0.1",
     "mocha": "^10.2.0",
     "mocha-allure-reporter": "^1.4.0",
     "mocha-multi-reporters": "^1.1.7",
-    "mochawesome": "^6.3.1",
+    "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.4.1",
-    "mochawesome-report-generator": "^5.1.0"
+    "mochawesome-report-generator": "^6.2.0"
   }
 }
